카카오 맵 등록 성공 커밋

--- a/go_or_no-vue/public/index.html
+++ b/go_or_no-vue/public/index.html
@@ -51,10 +51,7 @@
   <body>
     <div class="wrapper" id="app"></div>
     <!-- built files will be auto injected -->
-    <!--  Google Maps Plugin    -->
-    <!-- <script
-      src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAamVCoyQ4AuvBpxVRMs9P-HFkfPVQj0Kw"
-      type="text/javascript"
-    ></script> -->
+    <!-- Kakao Map PlugIn -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5ea65e52abed215fc0399854db4c101d&libraries=services,clusterer,drawing"></script>
   </body>
 </html>
